# twirly

./: .pre-commit-config.yaml  .ruff.toml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst
test/: __init__.py  test_utils.py
test/base/: __init__.py  test_twirling_state.py
test/groups/: __init__.py  test_haar.py
test/maps/: __init__.py  test_clifford_1q.py  test_clifford_2q.py  test_pauli.py
test/representations/: __init__.py  test_clifford.py  test_haar.py
tools/: verify_headers.py
twirly/: __init__.py  exceptions.py  utils.py
twirly/base/: __init__.py  circuit_bundle.py  enumerations.py  group_map.py  representation.py  twirling_group.py  twirling_state.py
twirly/groups/: __init__.py  clifford.py  clifford_1q.py  clifford_2q.py  haar.py  pauli.py
twirly/maps/: __init__.py  clifford.py  clifford_1q.py  clifford_2q.py  pauli.py
twirly/representations/: __init__.py  clifford.py  haar.py
